--- a/home/index.html
+++ b/home/index.html
@@ -74,7 +74,7 @@
         <div class="social-icons">
             <a target="_blank" href="https://x.com/sunaryum"><i class="fab fa-twitter"></i></a>
             <a target="_blank" href="https://discord.gg/WxcFdA2vvh"><i class="fab fa-discord"></i></a>
-            <a target="_blank" href="#"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://github.com/marcelomeloni/airdrop-sunaryum-pg/"><i class="fab fa-github"></i></a>
             <a target="_blank" href="#"><i class="fab fa-telegram"></i></a>
         </div>
         
