--- a/whitepaper/index.html
+++ b/whitepaper/index.html
@@ -17,7 +17,7 @@
     
     <!-- Logo -->
     <div class="logo">
-        <img style="height: auto; width: 290px;" src="../images/logo.svg" alt="Sunaryum Logo" class="logo-image">
+        <a href="../index.html"><img style="height: auto; width: 290px;" src="../images/logo.svg" alt="Sunaryum Logo" class="logo-image"></a>
     </div>
     
     <div class="container">
