--- a/whitepaper/br/index.html
+++ b/whitepaper/br/index.html
@@ -17,7 +17,7 @@
     
     <!-- Logo -->
     <div class="logo">
-        <a href="../../index.html"><img style="height: auto; width: 290px;" src="../../images/logo.svg" alt="Logo Sunaryum" class="logo-image"></a>
+        <a href="../../"><img style="height: auto; width: 290px;" src="../../images/logo.svg" alt="Logo Sunaryum" class="logo-image"></a>
     </div>
     
     <div class="container">
